fluxcd/infrastructure/configs/overlays/production/istio-policies/temple-of-time/allow-shlink-web-client-to-shlink-app.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-shlink-web-client-to-shlink-app
spec:
  selector:
    matchLabels:
      app: shlink-app
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/temple-of-time/sa/shlink-web-client
      to:
        - operation:
            ports: ["8080"]
